# artifex-client-web-react

./: .eslintrc.json  .gitignore  AUTHORS  README.md  index.html  package.json  tsconfig.json  vite.config.ts
crates/batch-exec/: Cargo.toml  LICENSE
crates/batch-exec/src/: lib.rs
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
src/components/: AboutDialog.tsx  ApplicationBar.tsx  ApplicationMenu.tsx  AutocompleteInput.tsx  CopyToClipboardButton.tsx  ErrorDialog.tsx  SettingsDialog.tsx  Sidebar.tsx  SidebarItem.tsx
src/contexts/: AppState.tsx
src/pages/: BatchPage.tsx  ErrorPage.tsx  SystemExecutePage.tsx  SystemInspectPage.tsx  SystemUpgradePage.tsx  WelcomePage.tsx
src/services/: artifex.client.ts  artifex.ts  index.ts
