[package]
name = "batch-exec"
version = "0.1.1"
description = "Artifex batch execution WASM extension"
authors = ["Eric Le Bihan <eric.le.bihan.dev@free.fr>"]
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
artifex-batch = { git = "https://github.com/elebihan/artifex", rev = "1771f96" }
artifex-rpc = { git = "https://github.com/elebihan/artifex", rev = "1771f96" }
thiserror = "1.0.59"
tonic = { version = "0.11", default-features = false, features = ["prost", "codegen"] }
tonic-web-wasm-client = "0.5.1"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true
